<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuNuevaPartida"
        android:orderInCategory="100"
        android:title="@string/menu_nueva_partida"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuCambiarNombres"
        android:orderInCategory="150"
        android:title="@string/menu_cambiar_nombres"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuAcercaDe"
        android:checkable="false"
        android:enabled="true"
        android:orderInCategory="200"
        android:title="@string/AboutPage"
        app:showAsAction="never" />

    <item
        android:id="@+id/menuReglas"
        android:orderInCategory="300"
        android:title="@string/reglas_title"
        app:showAsAction="never" />
</menu>