<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/app_name"
        app:titleTextColor="?attr/colorOnPrimary" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <!-- Columna del equipo 1 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Equipo1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Equipo_1"
                    android:textColor="@color/textoSobreGradiente"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/CardMarcador1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="?attr/colorSurfaceVariant"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp"
                    app:strokeWidth="0dp">

                    <TextView
                        android:id="@+id/Contador1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="150dp"
                        android:minHeight="90dp"
                        android:gravity="center"
                        android:text="@string/marcador_inicial"
                        android:textColor="@color/malas"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/Texto1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/fase_malas"
                    android:textColor="@color/textoSobreGradiente"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonRonda1"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/boton_ronda"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonParranda1"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_parranda"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonCaracol1"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_caracol"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonMajo1"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_majo"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonBienda1"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_bienda"
                    android:textSize="20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/BotonResta1"
                        style="@style/Widget.App.Button.Negativo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/boton_resta"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/BotonSuma1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/BotonSuma1"
                        style="@style/Widget.App.Button.Positivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/boton_suma"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/BotonResta1"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <!-- Columna del equipo 2 -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/Equipo_2"
                    android:textColor="@color/textoSobreGradiente"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/CardMarcador2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="?attr/colorSurfaceVariant"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="2dp"
                    app:strokeWidth="0dp">

                    <TextView
                        android:id="@+id/Contador2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="150dp"
                        android:minHeight="90dp"
                        android:gravity="center"
                        android:text="@string/marcador_inicial"
                        android:textColor="@color/malas"
                        android:textSize="50sp"
                        android:textStyle="bold" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/Texto2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/fase_malas"
                    android:textColor="@color/textoSobreGradiente"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonRonda2"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/boton_ronda"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonParranda2"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_parranda"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonCaracol2"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_caracol"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonMajo2"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_majo"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/BotonBienda2"
                    style="@style/Widget.App.Button.Neutral"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/boton_bienda"
                    android:textSize="20sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/BotonResta2"
                        style="@style/Widget.App.Button.Negativo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/boton_resta"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/BotonSuma2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/BotonSuma2"
                        style="@style/Widget.App.Button.Positivo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:text="@string/boton_suma"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/BotonResta2"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
